[package]
name = "hold-a-coin"
version = "0.1.0"
authors = ["Alex Silva <alex@unendli.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
